
- Touchdown can now manage allocation of parts of a network range through the
  `ip_network` type::

      network = config.add_ip_network(
          name='subnets',
          network='10.41.0.0/20',
      )

      app_serves = network.add_ip_allocation(
          name='app_servers',
          size='25',
      )

  This would allocate the first available `/25` in `10.41.0.0/20`.


0.8.0 (2016-03-15)
------------------

- Add support for AWS Lambda security groups and subnets.

- Support propagating tags for autoscaling groups and removing tags from ASG's.

- Fix SSH on newer versions of ubuntu.

- You can now set `evaluate_target_health` on a route53 alias target.

- Support for an 'empty' serializer. Mostly when a field isn't set it shouldn't
  have a value when serialized. CloudFront is an exception.

Touchdown now requires botocore 1.3.26 or higher.


0.7.4 (2016-02-09)
------------------

- Fix problems creating and copying AMI's

This release is tested with botocore 1.3.24.


0.7.3 (2016-02-08)
------------------

- Better diff rendering behaviour when a resource list has an item removed.


0.7.2 (2016-02-05)
------------------

- Fix typo in error message.

- Fix formatting error when diffing JSON payloads (such as for a `user_data`
  attribute on a launch config). In this case the direction of the change could
  be incorrect. (The actual change would be correct, however).


0.7.1 (2016-02-05)
------------------

- Don't try and delete launch configurations that are still in use.

- Better error messages when validating IAM certificate chains.

- Fix compatibility with progressbar2 >= 3.6.0. Previously it would work but
  there were some formatting issues.


0.7.0 (2016-02-02)
------------------

- Support 'update by replacement' for IAM Server Certificates.

- Validates that an IAM Server Certificate `private_key` belongs to its
  `certificate_body`.

- ELB attributes are now part of the load balancer object itself, so::

          aws.add_load_balancer(